--- a/movie-catalog-service1/pom.xml
+++ b/movie-catalog-service1/pom.xml
@@ -46,6 +46,10 @@
     
 </dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
