--- a/ratings-data-service/pom.xml
+++ b/ratings-data-service/pom.xml
@@ -46,7 +46,11 @@
     
 </dependency>
 
-	</dependencies>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-devtools</artifactId>
+			</dependency>
+		</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
